<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/settings_background" >

    <LinearLayout
        android:id="@+id/llMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp" />

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TableLayout
                android:id="@+id/tabViewBody"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="5dp"
                android:stretchColumns="1" >

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:gravity="right"
                        android:text="@string/settings_body_height" />

                    <EditText
                        android:id="@+id/editHeightMain"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal" />

                    <Spinner
                        android:id="@+id/spinHeightUnit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>

                <TableRow
                    android:id="@+id/rowHeightSub"
                    android:visibility="gone" >

                    <EditText
                        android:id="@+id/editHeightSub"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:inputType="numberDecimal" />

                    <TextView
                        android:id="@+id/textHeightSubUnit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp" />
                </TableRow>

                <TableRow android:layout_marginTop="10dp" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_span="2"
                        android:gravity="right"
                        android:text="@string/settings_body_weightunit" />

                    <Spinner
                        android:id="@+id/spinWeightUnit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>

                <TableRow android:layout_marginTop="10dp" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_span="2"
                        android:gravity="right"
                        android:text="@string/settings_body_stability_precision" />

                    <SeekBar
                        android:id="@+id/seekStabilityPrecision"
                        android:layout_width="wrap_content"
                        android:minWidth="100dp"
                        android:layout_height="wrap_content"
                        android:max="10" />
                </TableRow>
            </TableLayout>

            <LinearLayout
                android:id="@+id/tabViewSync"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <ListView
                    android:id="@+id/listSyncServices"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/settings_sync_global_background"
                    android:orientation="vertical"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:text="@string/settings_sync_global"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <eu.paulburton.fitscales.widget.Switch
                        android:id="@+id/swSyncAuto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/settings_sync_auto"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tabViewAbout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2" />

                <TextView
                    style="@android:style/TextAppearance.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/app_name" />

                <TextView
                    style="@android:style/TextAppearance.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/settings_about_copyright" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/settings_about_time" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/btnDonate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/settings_about_donate" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

</TabHost>